unit/src/dict.rs

extern "C" {
    pub fn dictFindPositionForInsert(
        d: *mut dict,
        key: *const ::core::ffi::c_void,
        existing: *mut *mut dictEntry,
    ) -> *mut ::core::ffi::c_void;
}
extern "C" {
    pub fn dictInsertAtPosition(
        d: *mut dict,
        key: *mut ::core::ffi::c_void,
        position: *mut ::core::ffi::c_void,
    ) -> *mut dictEntry;
}
extern "C" {
    pub fn dictAddOrFind(d: *mut dict, key: *mut ::core::ffi::c_void) -> *mut dictEntry;
}
extern "C" {
    pub fn dictReplace(
        d: *mut dict,
        key: *mut ::core::ffi::c_void,
        val: *mut ::core::ffi::c_void,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn dictDelete(d: *mut dict, key: *const ::core::ffi::c_void) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn dictUnlink(d: *mut dict, key: *const ::core::ffi::c_void) -> *mut dictEntry;
}
extern "C" {
    pub fn dictFreeUnlinkedEntry(d: *mut dict, he: *mut dictEntry);
}
extern "C" {
    pub fn dictTwoPhaseUnlinkFind(
        d: *mut dict,
        key: *const ::core::ffi::c_void,
        plink: *mut *mut *mut dictEntry,
        table_index: *mut ::core::ffi::c_int,
    ) -> *mut dictEntry;
}
extern "C" {
    pub fn dictTwoPhaseUnlinkFree(
        d: *mut dict,
        he: *mut dictEntry,
        plink: *mut *mut dictEntry,
        table_index: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn dictRelease(d: *mut dict);
}
extern "C" {
    pub fn dictFind(d: *mut dict, key: *const ::core::ffi::c_void) -> *mut dictEntry;
}
extern "C" {
    pub fn dictFetchValue(
        d: *mut dict,
        key: *const ::core::ffi::c_void,
    ) -> *mut ::core::ffi::c_void;
}
extern "C" {
    pub fn dictResize(d: *mut dict) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn dictSetKey(d: *mut dict, de: *mut dictEntry, key: *mut ::core::ffi::c_void);
}
extern "C" {
    pub fn dictSetVal(d: *mut dict, de: *mut dictEntry, val: *mut ::core::ffi::c_void);
}
extern "C" {
    pub fn dictSetSignedIntegerVal(de: *mut dictEntry, val: i64);
}
extern "C" {
    pub fn dictSetUnsignedIntegerVal(de: *mut dictEntry, val: u64);
}
extern "C" {
    pub fn dictSetDoubleVal(de: *mut dictEntry, val: f64);
}
extern "C" {
    pub fn dictIncrSignedIntegerVal(de: *mut dictEntry, val: i64) -> i64;
}
extern "C" {
    pub fn dictIncrUnsignedIntegerVal(de: *mut dictEntry, val: u64) -> u64;
}
extern "C" {
    pub fn dictIncrDoubleVal(de: *mut dictEntry, val: f64) -> f64;
}
extern "C" {
    pub fn dictEntryMetadata(de: *mut dictEntry) -> *mut ::core::ffi::c_void;
}
extern "C" {
    pub fn dictGetKey(de: *const dictEntry) -> *mut ::core::ffi::c_void;
}
extern "C" {
    pub fn dictGetVal(de: *const dictEntry) -> *mut ::core::ffi::c_void;
}
extern "C" {
    pub fn dictGetSignedIntegerVal(de: *const dictEntry) -> i64;
}
extern "C" {
    pub fn dictGetUnsignedIntegerVal(de: *const dictEntry) -> u64;
}
extern "C" {
    pub fn dictGetDoubleVal(de: *const dictEntry) -> f64;
}
extern "C" {
    pub fn dictGetDoubleValPtr(de: *mut dictEntry) -> *mut f64;
}
extern "C" {
    pub fn dictMemUsage(d: *const dict) -> usize;
}
extern "C" {
    pub fn dictEntryMemUsage() -> usize;
}
extern "C" {
    pub fn dictGetIterator(d: *mut dict) -> *mut dictIterator;
}
extern "C" {
    pub fn dictGetSafeIterator(d: *mut dict) -> *mut dictIterator;
}
extern "C" {
    pub fn dictInitIterator(iter: *mut dictIterator, d: *mut dict);
}
extern "C" {
    pub fn dictInitSafeIterator(iter: *mut dictIterator, d: *mut dict);
}
extern "C" {
    pub fn dictResetIterator(iter: *mut dictIterator);
}
extern "C" {
    pub fn dictNext(iter: *mut dictIterator) -> *mut dictEntry;
}
extern "C" {
    pub fn dictReleaseIterator(iter: *mut dictIterator);
}
extern "C" {
    pub fn dictGetRandomKey(d: *mut dict) -> *mut dictEntry;
}
extern "C" {
    pub fn dictGetFairRandomKey(d: *mut dict) -> *mut dictEntry;
}
extern "C" {
    pub fn dictGetSomeKeys(
        d: *mut dict,
        des: *mut *mut dictEntry,
        count: ::core::ffi::c_uint,
    ) -> ::core::ffi::c_uint;
}
extern "C" {
    pub fn dictGetStats(buf: *mut ::core::ffi::c_char, bufsize: usize, d: *mut dict);
}
extern "C" {
    pub fn dictGenHashFunction(key: *const ::core::ffi::c_void, len: usize) -> u64;
}
extern "C" {
    pub fn dictGenCaseHashFunction(buf: *const ::core::ffi::c_uchar, len: usize) -> u64;
}
extern "C" {
    pub fn dictEmpty(
        d: *mut dict,
        callback: ::core::option::Option<unsafe extern "C" fn(arg1: *mut dict)>,
    );
}
extern "C" {
    pub fn dictSetResizeEnabled(enable: dictResizeEnable);
}
extern "C" {
    pub fn dictRehash(d: *mut dict, n: ::core::ffi::c_int) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn dictRehashMilliseconds(d: *mut dict, ms: ::core::ffi::c_uint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn dictSetHashFunctionSeed(seed: *mut u8);
}
extern "C" {
    pub fn dictGetHashFunctionSeed() -> *mut u8;
}
extern "C" {
    pub fn dictScan(
        d: *mut dict,
        v: ::core::ffi::c_ulong,
        fn_: dictScanFunction,
        privdata: *mut ::core::ffi::c_void,
    ) -> ::core::ffi::c_ulong;
}
extern "C" {
    pub fn dictScanDefrag(
        d: *mut dict,
        v: ::core::ffi::c_ulong,
        fn_: dictScanFunction,
        defragfns: *mut dictDefragFunctions,
        privdata: *mut ::core::ffi::c_void,
    ) -> ::core::ffi::c_ulong;
}
extern "C" {
    pub fn dictGetHash(d: *mut dict, key: *const ::core::ffi::c_void) -> u64;
}
extern "C" {
    pub fn dictFindEntryByPtrAndHash(
        d: *mut dict,
        oldptr: *const ::core::ffi::c_void,
        hash: u64,
    ) -> *mut dictEntry;
}
extern "C" {
    pub fn dictGetStatsMsg(
        buf: *mut ::core::ffi::c_char,
        bufsize: usize,
        stats: *mut dictStats,
    ) -> usize;
}
extern "C" {
    pub fn dictGetStatsHt(d: *mut dict, htidx: ::core::ffi::c_int) -> *mut dictStats;
}
extern "C" {
    pub fn dictCombineStats(from: *mut dictStats, into: *mut dictStats);
}
extern "C" {
    pub fn dictFreeStats(stats: *mut dictStats);
}
